--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "lucide-react": "^0.545.0",
     "next": "14.2.15",
     "next-themes": "^0.4.6",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.6.0",
