--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-hot-toast": "^2.6.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^7.7.4"
+    "uploadthing": "^7.7.4",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/node": "^20",
