--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "pusher-js": "^8.4.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-error-boundary": "^6.0.0",
     "react-hot-toast": "^2.6.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
