--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "analyze": "cross-env ANALYZE=true next build",
     "postinstall": "prisma generate",
     "test": "vitest",
     "test:ui": "vitest --ui",
@@ -48,15 +49,19 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^16.0.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@vitejs/plugin-react": "^5.1.0",
     "@vitest/coverage-v8": "4.0.6",
     "@vitest/ui": "^4.0.6",
+    "cross-env": "^10.1.0",
     "happy-dom": "^20.0.10",
+    "msw": "^2.11.6",
     "postcss": "^8",
     "prisma": "^6.17.1",
     "tailwindcss": "^3.4.1",
