--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^18",
     "react-error-boundary": "^6.0.0",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
